--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-uglify": "^1.0.1",
     "source-map-explorer": "^1.3.2",
+    "systemjs": "^0.19.39",
     "tslint": "^3.15.1",
     "typescript": "~2.2.0"
   },
